# cg-accountant-game

./: .travis.yml  Cargo.toml  README.md
benches/: bench_game.rs  bench_point.rs
src/: data_point.rs  enemy.rs  game.rs  lib.rs  main.rs  point.rs  sniper.rs
src/core/: data_point.rs  enemy.rs  game.rs  mod.rs  point.rs  sniper.rs
tests/: enemy_tests.rs  game_tests.rs  point_tests.rs  sniper_tests.rs
