[package]
name = "accountant"
description = "Simulate the game 'The Accountant' of Codingame website"
version = "0.1.0"
authors = [ "woshilapin <woshilapin@tuziwo.info>" ]
publish = false
repository = "https://github.com/woshilapin/cg-accountant-game"
readme = "README.md"
keywords = ["codingame", "accountant", "rust"]
license = "GPL-3.0"

[dependencies]
clippy = "*"
